# commit-lint

./: .codacy.yaml  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  bandit.yaml  clean.json  pyproject.toml
.github/: CODEOWNERS  changed-files-spec.yml
.github/workflows/: 1-setup.yaml  2-tests.yaml  2-tests.yaml.old  3-publish.yaml  3-publish.yaml.old  ci.yml  cicd.yml  manual.yml  psr.yaml.old  publish.yaml  release-please.yaml  release-please.yaml.old  release.yaml  setup.yaml  tests.yaml  validate.yml
commit_lint/: __init__.py  cli.py  config.py
commit_lint/formats/: __init__.py  base.py  conventional.py  custom.py  github.py  jira.py
tests/: __init__.py  test_cli_callbacks.py.old  test_cli_commands.py  test_cli_commit.py  test_cli_config.py  test_cli_create.py  test_cli_errors.py  test_cli_git.py  test_cli_init.py  test_cli_inputs.py  test_cli_install.py  test_cli_lint.py  test_cli_options.py  test_cli_version.py
tests/formats/: test_github_format.py  test_jira_format.py
